Refonte dashboard, photos profil, CORS, mobile EduTrack
Backend:
- DashboardService: @Transactional + vues analytiques (enseignants, matieres, classes)
- DashboardController: hasRole('ADMINISTRATEUR') au lieu de hasAuthority
- SecurityConfig: CORS localhost dev pour WebView Capacitor (port dynamique)
- DashboardDataDto: nouveaux compteurs et vues analytiques
- application.properties: app.cors.allow-localhost-dev

Frontend-web:
- Dashboard: KPI cards + hub-grid navigation, photos profil utilisateurs
- Sidebar/topbar: visibilite logo EduTrack et breadcrumb
- Dashboard service: types analytiques (TopEnseignantRow, etc.)

Mobile-ionic:
- Profil: compression photo + zoom bouton deconnexion
- Bouton retour dans honoraires et planning
- App renommee EduTrack + logo login.jpeg (mipmap)
- capacitor.config.ts: appName EduTrack

Divers:
- .gitignore: artefacts nvm (.cache, alias, versions)
- Suppression fichiers orphelins (.txt, src/ racine)